- Added support for retreiving job count in interface API.
- Added support for specifying owners allowed or denied for 
  resources in resource request work API.
- Removed small bug generating php error messages in Utils.inc.
- Added support for reporting allowed and denied owners in daemon
  when requesting work.
- Added SIGHUP support in daemon for restarting logger.
- Made sure server updates use keep alives and caching in posting.
- Added support for relative paths in daemon config file, thanks
  to Willem v. Engen.
- Added the .spec files in specs to build RPMs on RHEL systems.
- Added support for more than 32k jobs in repository by adding 
  extra fan-out directory based on unique name. Limit is now 134M
  jobs on ext3 filesystem.
- Made sure .spec files create upgradable rpms and use correct source 
  URL.
- Removed small issues with relative paths in daemon config file.
- Made sure paths for daemon can have spaces.
- Updated default scripts a bit.
- Removed small scheduling bug from daemon.
- Tested .specs and code against RHEL 6; removed two small curl issues.
- Made sure that LGI python code can deal with limit=0 values.
- Updated documentation.
- Added configuration reload capabilities on SIGHUP into daemon.
- Added logic to reset libcurl handle; some versions of libcurl 
  seem to stop working after a fews days without any apparent reason.
- Removed small bug from escape string causing check system limits
  scripts to fail.
- Removed small lock_state issue.
- Removed possible XML injection issues found by Willem v. Engen which
  caused wrong output in parsing response XML tags. 


Tue September 6th 2011 -- version 1.31
--------------------------------------

- Added LGI server version number. Set initial version to 1.31.
- Added API version number. Set initial version to 1.31.
- Made XML tests more rigorous, added escaping and updated documentation.
- Added weak server certificate hostname check option into cli and daemon.

