@@ -29,7 +29,7 @@
    $RepositoryDir = substr( $Repository, -3 )."/".$Repository;
    if( is_dir( "./".escapeshellcmd( $RepositoryDir ) ) )
    {
-    $Find = "find ./".escapeshellcmd( $RepositoryDir )." -type f -printf '<file name=\"%P\"> <size> %s </size> <date> %T@ </date> </file> '";
+    $Find = "find ./".escapeshellcmd( $RepositoryDir )." -type f -printf '//%P/%s/%T@//'";    // use seperators that cannot appear in paths or filenames...
     $Content = shell_exec( $Find ); 
    }
    else
@@ -38,5 +38,29 @@
   else
    $Content = "";
 
-  echo "<repository_content name=\"$Repository\"> $Content </repository_content>";
-?>
+  echo "<repository_content> <repository_name> $Repository </repository_name>";
+ 
+  $NrOfFiles = 0; $Length = strlen( $Content );
+  for( $i = 2; $i < $Length; ++$i )
+  {
+   $SepPos = strpos( $Content, "//", $i );
+  
+   $DatePos = $SepPos - 1;
+   while( $DatePos > $i && $Content[ $DatePos ] != '/' ) --$DatePos;
+   $SizePos = $DatePos - 1;
+   while( $SizePos > $i && $Content[ $SizePos ] != '/' ) --$SizePos;
+   $FilePos = $DatePos - 1;
+   while( $FilePos > 0 && substr( $Content, $FilePos, 2 ) != '//' ) --$FilePos;
+
+   $Date = substr( $Content, $DatePos + 1, $SepPos - $DatePos - 1 );
+   $Size = substr( $Content, $SizePos + 1, $DatePos - $SizePos - 1 );
+   $File = substr( $Content, $FilePos + 2, $SizePos - $FilePos - 2 );
+
+   $NrOfFiles++;
+   echo " <file number=\"$NrOfFiles\"> <file_name> ".str_replace( '&#039;', '&apos;', htmlspecialchars( $File, ENT_QUOTES ) )." </file_name> <size> $Size </size> <date> $Date </date> </file>";
+
+   $i = $SepPos + 4;
+  }
+
+  echo " <number_of_files> $NrOfFiles </number_of_files> </repository>";
+?> 
